# trenkwalder

./: .dockerignore  .env.example  .gitignore  Justfile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/clients/: __init__.py  mcp_client.py
backend/app/core/: config.py
backend/app/models/: __init__.py  chunk.py  conversation.py  employee.py  message.py
backend/app/repositories/: __init__.py  conversation_repository.py  document_manifest_repository.py  employee_repository.py  vector_repository.py
backend/app/schemas/: chat.py  directory.py  error.py  rag.py
backend/app/services/: __init__.py  chat_service.py  directory_service.py  hr_service.py  rag_service.py
backend/app/tools/: descriptions.py  registry.py
backend/docs/csv/: employees.csv
backend/docs/md/: benefits.md
backend/docs/txt/: code_of_conduct.txt
backend/etl/: __init__.py
backend/etl/structured/: load.py  pipeline.py  transform.py
backend/etl/unstructured/: load.py  pipeline.py
backend/mcp_server/: server.py
backend/pipelines/: __init__.py
backend/pipelines/structured/: extract.py  trigger.py
backend/pipelines/unstructured/: extract.py  load.py  transform.py  trigger.py
backend/tests/: conftest.py  test_health.py
backend/tests/contract/: test_aisdk_wire_format.py
backend/tests/integration/: test_conversation_repository.py  test_employee_repository.py  test_health.py  test_hr_mcp_server.py  test_mcp_client.py  test_structured_pipeline.py  (+2 more)
backend/tools/: make_handbook.py
(+54 files in other folders)
