[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.1.0"
requires-python = ">=3.11"
description = "Trenkwalder Chatbot — FastAPI backend"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "google-genai>=1.0.0",
    "mcp>=1.0.0",
    "lancedb>=0.17.0",
    "polars>=1.0.0",
    "pypdf>=5.0.0",
    "markdown-it-py>=3.0.0",
    "structlog>=23.2.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "asgi-correlation-id>=4.3.4",
    "tiktoken>=0.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "pipelines*", "mcp_server*"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: fast tests, no I/O, mocked boundaries",
    "integration: real I/O (LanceDB, files, subprocess)",
    "contract: verify wire format (AI SDK protocol lines)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM117"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
